# xmpp.org

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  Dockerfile  DockerfileDev  LICENSE.md  Makefile  MakefileDocker  README.md  Vagrantfile  adams-notes.md  archives.html  blog.html  blog10.html  blog11.html  blog12.html  blog13.html  blog14.html  blog15.html  blog16.html  blog17.html  blog18.html  blog19.html  blog2.html  blog20.html  blog3.html  blog4.html  blog5.html  blog6.html  blog7.html  blog8.html  blog9.html  buildCompleteWebsite.sh  categories.html  contact.html  fabfile.py  index.html  (+4 more)
2007/: index.html
2008/: index.html
2009/: index.html
2010/: index.html
2011/: index.html
2012/: index.html
2013/: index.html
2014/: index.html
2015/: index.html
2016/: index.html
about/: faq.html  history.html  index.html  standards-process.html  technology-overview.html  the-jabber-project.html  who-uses-xmpp.html  xmpp-standards-foundation.html
archetypes/: blog.md
author/: admin.html  admin2.html  bear.html  bear2.html  bear3.html  bear4.html  bear5.html  bear6.html  dwd.html  fippo.html  florian.html  joachimlindborg.html  kev.html  laura.html  neustradamus.html  nyco.html  nyco2.html  ralphm.html  simon.html  stpeter.html  stpeter2.html  stpeter3.html  stpeter4.html  stpeter5.html  stpeter6.html  stpeter7.html  stpeter8.html  tobi.html  willsheward.html  willsheward2.html  willsheward3.html
cache/: .gitignore
category/: misc.html  misc10.html  misc11.html  misc12.html  misc13.html  misc14.html  misc15.html  misc16.html  misc17.html  misc18.html  misc19.html  misc2.html  misc20.html  misc3.html  misc4.html  misc5.html  misc6.html  misc7.html  misc8.html  misc9.html
community/: chat.html  events.html  (+5 more)
(+1898 files in other folders)
